@@ -157,13 +157,15 @@ class Document(qt4.QObject):
         """Log a message - this is emitted as a signal."""
         self.sigLog.emit(message)
 
-    def applyOperation(self, operation):
+    def applyOperation(self, operation, redoing=False):
         """Apply operation to the document.
 
         Operations represent atomic actions which can be done to the document
         and undone.
 
         Updates are suspended during the operation.
+
+        If redoing is not True, the redo stack is cleared
         """
 
         with DocSuspend(self):
@@ -176,7 +178,9 @@ class Document(qt4.QObject):
         else:
             # standard mode
             self.historyundo = self.historyundo[-9:] + [operation]
-        self.historyredo = []
+
+        if not redoing:
+            self.historyredo = []
 
         return retn
 
@@ -211,7 +215,7 @@ class Document(qt4.QObject):
     def redoOperation(self):
         """Redo undone operations."""
         operation = self.historyredo.pop()
-        return self.applyOperation(operation)
+        return self.applyOperation(operation, redoing=True)
 
     def canRedo(self):
         """Returns True if previous operation can be redone."""
