@@ -4,6 +4,7 @@ Changes in <next version>:
  * Fix for Chinese and Korean characters in filenames on Windows
  * Sort DatasetPlugin arguments for diffing
  * Fix bitmap EMF export in Python 3
+ * The redo operation can now be done multiple times
 
 Changes in 2.1.1:
  * Fix dashed/dotted custom lines in EMF output
